--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
 	"presets": [
-		["@babel/preset-env",
+		[
+			"@babel/preset-env",
 			{
-				"targets": {
-					"node": "10"
-				}
+				"targets": { "esmodules": true, "node": "10" }
 			}
 		]
 	]
